crates/plotnik-tests/tests/02-parser/recovery_validation/quantified_captured_negated_field.txt
Q = (pair -key* @x)
------------------ DIAGNOSTICS -------------------
error: negated grammar fields cannot be quantified
 --> query.ptk:1:15
  |
1 | Q = (pair -key* @x)
  |               ^
  |
help: remove the quantifier
  |
1 - Q = (pair -key* @x)
1 + Q = (pair -key @x)
  |
help: a negated grammar field asserts absence and produces no value

error: negated grammar fields cannot be captured
 --> query.ptk:1:17
  |
1 | Q = (pair -key* @x)
  |                 ^^
  |
help: remove the capture
  |
1 - Q = (pair -key* @x)
1 + Q = (pair -key* )
  |
help: a negated grammar field asserts absence and produces no value
